Add support for Today's Settlement data in dashboard
Implemented retrieval and display of "Today's Settlement" data in the analytical charts and reporting dashboard. Added new API client methods, DTOs, and MediatR queries/handlers for settlement data. Updated Blazor UI to load and display settlement info alongside sales data, and refactored chart update logic for improved reliability. Removed obsolete code and ensured all data loads in parallel for better performance.

--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/AnalyticalCharts.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/AnalyticalCharts.razor
@@ -145,7 +145,7 @@
                     <h3 class="card-title">Transaction Volume Over Time</h3>
                 </div>
                 <div class="card-body">
-                    <canvas  @ref="volumeCanvas" id="volumeChart" style="max-height: 400px;"></canvas>
+                    <canvas id="volumeChart" style="max-height: 400px;"></canvas>
                 </div>
             </div>
 
@@ -155,7 +155,7 @@
                     <h3 class="card-title">Transaction Value Over Time</h3>
                 </div>
                 <div class="card-body">
-                    <canvas @ref="valueCanvas" id="valueChart" style="max-height: 400px;"></canvas>
+                    <canvas id="valueChart" style="max-height: 400px;"></canvas>
                 </div>
             </div>
         </div>
